--- a/tests/test_pdm_interface/.project
+++ b/tests/test_pdm_interface/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test_output_fir</name>
+	<name>test_pdm_interface</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -11,12 +11,12 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.xmos.cdt.core.LegacyProjectCheckerBuilder</name>
+			<name>com.xmos.cdt.core.ModulePathBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.xmos.cdt.core.ModulePathBuilder</name>
+			<name>com.xmos.cdt.core.LegacyProjectCheckerBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
