--- a/tests/test_pdm_interface/Makefile
+++ b/tests/test_pdm_interface/Makefile
@@ -6,7 +6,7 @@ TARGET = XCORE-200-EXPLORER
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
 # the project name
-APP_NAME = test_output_fir
+APP_NAME = test_pdm_interface
 
 # The USED_MODULES variable lists other module used by the application.
 USED_MODULES = lib_mic_array
@@ -16,7 +16,7 @@ USED_MODULES = lib_mic_array
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O2 -g
+XCC_FLAGS = -O2 -g -Wno-timing
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
