--- a/pdm_mic_frontend_fir_generator/.project
+++ b/pdm_mic_frontend_fir_generator/.project
@@ -6,6 +6,21 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>com.xmos.cdt.core.ModulePathBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.xmos.cdt.core.LegacyProjectCheckerBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>com.xmos.cdt.core.ProjectInfoSyncBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
