Updat to lib_mic_array user guide

--- a/tests/test_backend/.cproject
+++ b/tests/test_backend/.cproject
@@ -197,6 +197,9 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/xc"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.873148349" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -521,6 +524,8 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.154110999" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -851,6 +856,9 @@
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/clang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${XMOS_TOOL_PATH}\target/include/c++/v1&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/clang"/>
+									<listOptionValue builtIn="false" value="/home/andrew/vda_view/Installs/Linux/target/include/c++/v1"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.165940117" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
