Add test_results.csv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,5 @@ Doxyfile-e
 examples/app_lores_DAS_fixed/.project
 lib_mic_array/doc/pdf/index.pdf
 tests/test_fir_model/trace.xstr
+tests/test_results.csv
 *.fir_coefs
